--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="main-container">
         <div class="home-container">
 
-            <!-- <div class="bg-img">
+            <div class="bg-img">
                 <img src="/assets/bg/bg-picture-03.webp" alt="">
-            </div> -->
+            </div>
             <div class="start-section">
             <div class="bg-animations" id="bg-animations">
                 <div class="bg-anim"></div>
@@ -479,6 +479,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script>
+        // For contact form
+
+        const form = document.querySelector("#form")
+        const submitButton = document.querySelector("#contact-btn")
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbysYX7eEm9rFvP-SN-MoyXIC0tLZZ-efWX9EEncmE5XA3GekLbnSMcdBVfE6nivL_vh/exec'
+
+        form.addEventListener('submit', e => {
+            console.log("Working...");
+            submitButton.disabled = true
+            e.preventDefault()
+            let requestBody = new FormData(form)
+            fetch(scriptURL, { method: 'POST', body: requestBody })
+                .then(response => {
+                    alert('Thank you!!! For quick response you can call/mail me', response)
+                    submitButton.disabled = false
+                })
+                .catch(error => {
+                    alert('Error!', error.message)
+                    submitButton.disabled = false
+
+                }
+                )
+        })
+    </script>
 </body>
 
 </html>
