--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="phone.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/pk-fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/pk-fav.png" width="50" height="50" type="image/x-icon">
 
 </head>
 
@@ -54,11 +54,11 @@
             <section class="home-introduction" id="home">
                 <div class="home-intro">
                     <div class="home-intro-container">
-                        <p class="content-p">Hi there! I'm </p>
+                        <p class="content-p">Hey there, I’m</p>
                         <h2>Pritam Khaple,</h2>
-                        <h3 class="content-h">a Front-end Deloveper based in Ch. Sambhajinagar</h3>
-                        <p class="content-p">Designing Intuitive AI Solutions that empower users to discover,
-                            Understand, and act on data insight at Qlik.</p>
+                        <h3 class="content-h">A frontend developer! I turn ideas into cool websites by mixing creativity and code!</h3>
+                        <p class="content-p">I design and code beautifully simple things, and I love what I do!</p>
+                        <p class="content-p">You can view my CV from here</p>
                         <div class="btnn" id="home-btn"><a href="/assets/Pritam-khaple.pdf" target="_blank">Download
                                 CV</a></div>
                     </div>
@@ -70,13 +70,9 @@
                 <div class="about">
                     <div class="about-container">
                         <h3 class="content-h">About Me</h3>
-                        <p class="content-p">Enthusiastic and driven Fresher Frontend Developer with a passion for
-                            crafting immersive
-                            digital experiences. </p>
-                        <p class="content-p">Proficient in HTML, CSS, and JavaScript, eager to leverage strong
-                            problem-solving skills to
-                            create responsive and user-friendly web applications.</p>
-                        <button id="read" class="read-btn">Read more</button>
+                        <p class="content-p">I'm a lively Frontend Developer! I love making awesome digital stuff using HTML, CSS, and JavaScript. Furthermore, I have studied Computer Application, and I'm eager to learn and bring new ideas to web development projects!</p>
+                        <p class="content-p">Let's create a fun digital world together that people will love to use!</p>
+                        <!-- <button id="read" class="read-btn">Read more</button>
                         <div class="read-more">
                             <p class="content-p">Graduated with a degree in Computer Application, equipped with a
                                 foundation
@@ -84,7 +80,7 @@
                                 development principles and a commitment to staying updated with emerging technologies.
                                 Excited to contribute innovative ideas and learn from experienced professionals in a
                                 collaborative team environment.</p>
-                        </div>
+                        </div> -->
                         <!-- <div class="btnn"><a href="">Read more</a></div> -->
                     </div>
                 </div>
@@ -215,21 +211,11 @@
 
                                     <div class="proj-info">
                                         <h3 class="content-h">Netflix Clone</h3>
-                                        <p class="content-p">Developed a clone using HTML & CSS, showcasing passion
-                                            for
-                                            web development
-                                        </p>
-                                        <p class="content-p"> Crafted a responsive static website, highlighting
-                                            attention to detail and
-                                            user experience</p>
+                                        <p class="content-p"><strong class="sky-bl"><u>Introduction</u></strong>: This project involves the creation of a responsive landing page for Mahindra using HTML and CSS.</p>
+                                        <p class="content-p"><strong class="sky-bl"><u>Key Project Elements</u></strong>: The landing page has been crafted using HTML and CSS, incorporating modern design principles and best practices to ensure a polished and engaging user experience.</p>
                                         <button id="read" class="read-btn">Read more</button>
                                         <div class="read-more">
-                                            <p class="content-p"> Successfully designed and implemented the homepage,
-                                                demonstrating
-                                                proficiency in front-end development</p>
-                                            <p class="content-p">Utilized HTML & CSS to create a visually appealing and
-                                                functional website,
-                                                showcasing technical skills and creativity.</p>
+                                            <p class="content-p"><strong class="sky-bl"><u>Responsive Design</u></strong>: A paramount aspect of this project has been to prioritize responsiveness. The webpage layout dynamically adjusts to different screen sizes, ensuring optimal viewing across devices, including desktops, tablets, and mobile phones.</p>
                                         </div>
 
                                         <div class="btn-divv">
@@ -309,19 +295,12 @@
                                     <div class="proj-info">
                                         <h3 class="content-h">Swiggy Clone</h3>
 
-                                        <p>Developed a Swiggy clone with a passionate approach, showcasing a
-                                            responsive
-                                            design that seamlessly functions on both desktop and mobile platforms.
-                                        </p>
-                                        <p>Created four pages, including a visually appealing home page and three
-                                            engaging inner pages, using HTML and CSS.</p>
+                                        <p><strong class="sky-bl"><u>Introduction</u></strong>: This project involves the creation of a responsive landing page for Mahindra using HTML and CSS.</p>
+                                        <p><strong class="sky-bl"><u>Key Project Elements</u></strong>: The landing page has been crafted using HTML and CSS, incorporating modern design principles and best practices to ensure a polished and engaging user experience.</p>
                                         <button id="read" class="read-btn">Read more</button>
                                         <div class="read-more">
-                                            <p>Demonstrated expertise in web development, utilizing action verbs to
-                                                highlight a passion for the project without using personal pronouns.
-                                            </p>
-                                            <p>
-                                                The clone has 4 pages on-site<br>(<a href="">Home, </a>
+                                            <p><strong class="sky-bl"><u>Responsive Design</u></strong>: A paramount aspect of this project has been to prioritize responsiveness. The webpage layout dynamically adjusts to different screen sizes, ensuring optimal viewing across devices, including desktops, tablets, and mobile phones.</p>
+                                            <p><strong class="sky-bl"><u>Development</u></strong>: The clone has 4 pages on-site<br>(<a href="">Home, </a>
                                                 <a href="">Hotels, </a>
                                                 <a href="">Products </a>&amp;
                                                 <a href="">Cart</a>)
@@ -430,7 +409,7 @@
                 <div class="contact-me">
                     <div class="left-contact">
                         <h3 class="content-h">Want to contact me?</h3>
-                        <p class="content-p">N-11, TV Center, Hudco, Aurangabad <br>MH 431003</p>
+                        <p class="content-p">N-11, TV Center, Hudco, Chh. Sambhajinagar (Aurangabad), <br>MH 431003</p>
                         <!-- <p class="content-p rd"><a
                                 href="mailto:pritamkhaple8585@gmail.com">pritamkhaple8585@gmail.com</a></p>
                         <p class="content-p rd"><a href="tel:+917298585851">+91-7298585851</a></p> -->
