--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
                 <div class="navv">
                     <div class="left">
-                        <span>&#10094;&#x2215;&#10095; Pritam</span>
+                        <a href="#home"><span>&#10094;&#x2215;&#10095; Pritam</span></a>
                     </div>
                     <!-- <div class="right"> -->
                     <ul class="nav-ul">
-                        <li id="d-none"><a class="nav-a" href="">Home</a></li>
+                        <li id="d-none"><a class="nav-a" href="#home">Home</a></li>
                         <li><a class="nav-a" href="#about">About</a></li>
                         <li><a class="nav-a" href="#project">Works</a></li>
                         <li><a class="nav-a" href="#contact">Contact</a></li>
@@ -301,9 +301,9 @@
                                         <div class="read-more">
                                             <p><strong class="sky-bl"><u>Responsive Design</u></strong>: A paramount aspect of this project has been to prioritize responsiveness. The webpage layout dynamically adjusts to different screen sizes, ensuring optimal viewing across devices, including desktops, tablets, and mobile phones.</p>
                                             <p><strong class="sky-bl"><u>Development</u></strong>: The clone has 4 pages on-site<br>(<a href="">Home, </a>
-                                                <a href="">Hotels, </a>
-                                                <a href="">Products </a>&amp;
-                                                <a href="">Cart</a>)
+                                                <a href="https://swiigyy.netlify.app/hotel-list">Hotels, </a>
+                                                <a href="https://swiigyy.netlify.app/products">Products </a>&amp;
+                                                <a href="https://swiigyy.netlify.app/cart">Cart</a>)
                                             </p>
                                         </div>
 
