--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
                                         <div class="read-more">
                                             <p><strong class="sky-bl"><u>Responsive Design</u></strong>: A paramount aspect of this project has been to prioritize responsiveness. The webpage layout dynamically adjusts to different screen sizes, ensuring optimal viewing across devices, including desktops, tablets, and mobile phones.</p>
                                             <p><strong class="sky-bl"><u>Development</u></strong>: The clone has 4 pages on-site<br>(<a href="">Home, </a>
-                                                <a href="https://swiigyy.netlify.app/hotel-list">Hotels, </a>
-                                                <a href="https://swiigyy.netlify.app/products">Products </a>&amp;
-                                                <a href="https://swiigyy.netlify.app/cart">Cart</a>)
+                                                <a href="https://swiigyy.netlify.app/hotel-list" target="_blank">Hotels, </a>
+                                                <a href="https://swiigyy.netlify.app/products" target="_blank">Products </a>&amp;
+                                                <a href="https://swiigyy.netlify.app/cart" target="_blank">Cart</a>)
                                             </p>
                                         </div>
 
