--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h3 class="content-h">A frontend developer! I turn ideas into cool websites by mixing creativity and code!</h3>
                         <p class="content-p">I design and code beautifully simple things, and I love what I do!</p>
                         <p class="content-p">You can view my CV from here</p>
-                        <div class="btnn" id="home-btn"><a href="/assets/Pritam-khaple.pdf" target="_blank">Download
+                        <div class="btnn" id="home-btn"><a href="/assets/resume-Pritam-Khaple.pdf" target="_blank">Download
                                 CV</a></div>
                     </div>
                 </div>
